--- a/_config.yml
+++ b/_config.yml
@@ -1,18 +1,18 @@
-title: <p align="center"> Chris Tran </p>
+title: <p align="center"> Monika Sembiring </p>
 
 logo: "/images/picture.png?raw=true"
 
 description:
   <p align="center">
   <a href="pdf/resume.pdf">Resume</a> |
-  <a href="https://www.linkedin.com/in/chriskhanhtran/">LinkedIn</a> |
-  <a href="https://github.com/chriskhanhtran">GitHub</a>
+  <a href="https://www.linkedin.com/in/monikasembiring/">LinkedIn</a> |
+  <a href="https://github.com/monikasembiring">GitHub</a>
   </p>
   
   <p align="justify">
-  I am pursing MS degree in Business Analytics at Simon Business School, University of Rochester.
+  I am a recent graduate student from Carnegie Mellon University with focus on Business Intelligence and Data Analytics.
   <br><br>
-  I am currently a Machine Learning Research Intern at Skim AI Technologies with a focus on NLP and Deep Learning research.
+  Combined with my experience as a product manager for 4+ years, I utilize/analyzes data to build products and solve business problems.
   <br><br>
   </p>
   
