--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: <p align="center"> Monika Sembiring </p>
 
-logo: "/images/picture.png?raw=true"
+logo: "/images/profile-picture.png?raw=true"
 
 description:
   <p align="center">
