--- a/_config.yml
+++ b/_config.yml
@@ -17,4 +17,4 @@ description:
   </p>
   
 theme: jekyll-theme-minimal
-google_analytics: UA-145578661-1 # Google Analytics tracking ID
+google_analytics: G-ZZMDXT2QM4 # Google Analytics tracking ID
