--- a/_config.yml
+++ b/_config.yml
@@ -10,9 +10,9 @@ description:
   </p>
   
   <p align="justify">
-  A recent graduate student from Carnegie Mellon University with focus on Business Intelligence and Data Analytics.
+  A recent graduate student from Carnegie Mellon University with a focus on Business Intelligence and Data Analytics.
   <br>
-  Combined with my experience as a product manager for 4+ years, I analyzes data to build products and solve business problems.
+  Combined with my experience as a product manager for 4+ years, I analyze data to build products and solve business problems.
   <br><br>
   </p>
   
